Fix bug where customizing page removed scrollbar and scrollbar was not restored when navigating away without cancelling the customization state.
Also fix minor layout bug on customize color boxes.

--- a/css/obBase.css
+++ b/css/obBase.css
@@ -4078,6 +4078,7 @@ input[type="checkbox"].fieldItem:checked + label .togLabelOff {
   border-top-right-radius: 3px;
   border-bottom-right-radius: 3px;
   transition: width .35s cubic-bezier(0, 0, 0.2, 1);
+  box-sizing: border-box;
 }
 
 .customizePrimaryColorRecommendations.show,
